--- a/exr2/index.html
+++ b/exr2/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas width="300" height="300"></canvas>
+    <div class="cov">
+        <span></span>
+        <canvas width="300" height="300"></canvas>
+    </div>
     <button id='inv'>invert colors</button>
     <button id='reset'>reset</button>
+    <input type="file" id='file'>
     <div>
         R : <input id='r' value="0" type="number" min="0" max="255">
         <br>
