--- a/exr2/index.html
+++ b/exr2/index.html
@@ -15,11 +15,11 @@
     <button id='reset'>reset</button>
     <input type="file" id='file'>
     <div>
-        R : <input id='r' value="0" type="number" min="0" max="255">
+        R : <input id='r' value="0" type="range" min="0" max="255">
         <br>
-        G : <input id='g' value="0" type="number" min="0" max="255">
+        G : <input id='g' value="0" type="range" min="0" max="255">
         <br>
-        B : <input id='b' value="0" type="number" min="0" max="255">
+        B : <input id='b' value="0" type="range" min="0" max="255">
     </div>
     <script src="app.js"></script>
 </body>
